added get favourites
